# lwgsm

./: .gitignore  CMakeLists.txt
lwgsm/src/api/: lwgsm_netconn.c  lwgsm_network_api.c
lwgsm/src/include/lwgsm/: lwgsm.h  lwgsm_certs.h  lwgsm_conn.h  lwgsm_device_info.h  lwgsm_netconn.h  lwgsm_network.h  lwgsm_network_api.h  lwgsm_opt.h  lwgsm_parser.h  lwgsm_private.h  lwgsm_typedefs.h  lwgsm_utils.h
lwgsm/src/include/system/: lwgsm_sys.h
lwgsm/src/include/system/port/esp32/: lwgsm_provision.h  lwgsm_sys_port.h
lwgsm/src/lwgsm/: lwgsm.c  lwgsm_certs.c  lwgsm_conn.c  lwgsm_int.c  lwgsm_network.c  lwgsm_parser.c  lwgsm_threads.c
lwgsm/src/system/: lwgsm_ll_esp32.c  lwgsm_provision_esp32.c  lwgsm_sys_freertos_os.c
snippets/: netconn_client.c  network_utils.c  operator_utils.c  sim_manager.c
snippets/include/: network_utils.h  operator_utils.h  sim_manager.h
test/: CMakeLists.txt  test_lwgsm_parser.c  test_lwgsm_sys.c
